<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login.SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Full_Name"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_2"
        android:layout_below="@id/Sign_UP_Txt_Layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_Address"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_3"
        android:layout_below="@id/Sign_UP_Txt_Layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:inputType="phone"
            android:maxLength="10"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_4"
        android:layout_below="@id/Sign_UP_Txt_Layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_5"
        android:layout_below="@id/Sign_UP_Txt_Layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/Sign_Up_LinearLayout1_Spinner_6"
        android:layout_below="@id/Sign_UP_Txt_Layout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <Spinner
            android:id="@+id/Sign_Up_Spinner_Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/Gender_Type"
            />
    </LinearLayout>

    <Button
        android:id="@+id/Sign_up_Btn_SignUp_7"
        android:layout_below="@id/Sign_Up_LinearLayout1_Spinner_6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:textColor="@color/White"
        android:background="@color/Green"
        />
</RelativeLayout>