<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Sign_In_Root_Tag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="26dp"
    tools:context=".Login.A_SignIn">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_txt_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_txt_edit_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_Address"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_txt_layout_2"
        android:layout_below="@id/sign_in_txt_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_txt_edit_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/sign_in_btn_SignIn"
        android:layout_below="@id/sign_in_txt_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Sign_In"
        android:background="@color/Green"
        android:textColor="@color/White"
        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/Sign_In_Btn_Google_SignIn_4"
        android:layout_below="@id/sign_in_btn_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        />
   <LinearLayout
       android:id="@+id/Sign_In_LinearLayout_SignUp_Link"
       android:layout_below="@id/Sign_In_Btn_Google_SignIn_4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_centerHorizontal="true"
       android:paddingTop="26dp"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Dont_have_account"
           />
       <TextView
           android:id="@+id/Sign_In_txt_SignUP_Link"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:clickable="true"
           android:onClick="onClick"
           android:textColor="@color/Green"
           android:text="@string/Sign_Up"
           />
   </LinearLayout>
    <LinearLayout
        android:id="@+id/Sign_In_LinearLayout_Reset_Password_Link"
        android:layout_below="@id/Sign_In_LinearLayout_SignUp_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:paddingTop="26dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trouble_Logging_In"
            />
        <TextView
            android:id="@+id/Sign_In_txt_Reset_Password_Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:textColor="@color/Green"
            android:text="@string/Reset"
            />
    </LinearLayout>

</RelativeLayout>