<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomNavigationThings.Profile.ProfileFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_Profile_Page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DodgerBlue"
        app:title="My Account"
        app:titleTextColor="@color/White"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1_profile"
        android:layout_below="@id/Toolbar_Profile_Page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/DodgerBlue"
        >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageView
               android:id="@+id/Profile_Fragment_ImgBtn_Profile"
               android:layout_width="90dp"
               android:layout_height="90dp"
               android:layout_centerHorizontal="true"
               android:padding="20dp"
               android:src="@drawable/women_icon"
               android:contentDescription="@string/Profile_Content_Description_Profile_Picture"
               />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Profile_Fragment_ImgBtn_Profile"
                android:layout_centerHorizontal="true"
                android:text="@string/Display_Name"
                android:textColor="@color/White"
                />
           <TextView
               android:id="@+id/Profile_Fragment_TxtView_Profile_Phone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/Profile_Fragment_TxtView_Profile_Name"
               android:layout_centerHorizontal="true"
               android:paddingTop="10dp"
               android:text="@string/Phone_Number"
               android:textColor="@color/White"
               />
           <ImageView
               android:id="@+id/Profile_Fragment_ImgBtn_Profile_Edit_Btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_below="@id/Profile_Fragment_TxtView_Profile_Phone"
               android:src="@drawable/edit_btn"
               android:contentDescription="@string/Profile_Description_EditIcon"
               />
       </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2_profile"
        android:layout_below="@id/card1_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyWishList_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyWishList"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line1"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MyWishList_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyWishList"
                android:layout_below="@id/Profile_Fragment_View_Profile_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyWishList_View"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
       android:id="@+id/card3_profile"
       android:layout_below="@id/card2_profile"
       android:layout_margin="8dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       <TextView
           android:id="@+id/Profile_Fragment_TxtView_Profile_MyOrders_Label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Profile_MyOrders"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
           android:textSize="16sp"
           android:padding="10dp"
           />
       <View
           android:id="@+id/Profile_Fragment_View_Profile_line2"
           android:layout_below="@id/Profile_Fragment_TxtView_Profile_MyOrders_Label"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="#000"
           />
           <TextView
               android:id="@+id/Profile_Fragment_TxtView_Profile_MyOrders"
               android:layout_below="@id/Profile_Fragment_View_Profile_line2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Profile_MyOrders_ViewAll"
               android:layout_alignParentEnd="true"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
               android:textColor="@color/DodgerBlue"
               android:textSize="16sp"
               android:padding="10dp"
               />
       </RelativeLayout>
   </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card4_profile"
        android:layout_below="@id/card3_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyCart_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyCart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line5"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MyCart_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyCart"
                android:layout_below="@id/Profile_Fragment_View_Profile_line5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyCart_ViewAll"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card5_profile"
        android:layout_below="@id/card4_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MySettings_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_Settings"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line3"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MySettings_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MySettings"
                android:layout_below="@id/Profile_Fragment_View_Profile_line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_Settings_Update"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card6_profile"
        android:layout_below="@id/card5_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyAddresses_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyAddresses"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line4"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MyAddresses_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyAddresses"
                android:layout_below="@id/Profile_Fragment_View_Profile_line4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyAddresses_Add"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card7_profile"
        android:layout_below="@id/card6_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/Profile_Fragment_ImgView_Logout_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logout_icon"
                android:contentDescription="@string/Profile_Content_Description_Logout"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Logout_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_Logout"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/Profile_Fragment_Fragment_Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>